--- a/personalSite/base.html
+++ b/personalSite/base.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
     <head>
@@ -10,19 +11,97 @@
 
         <!--Icon-->
         <title>Omer</title>
-        <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+        <link rel="shortcut icon" href="img/icon.png" type="image/x-icon">
         <link rel="icon" href="img/icon.png">
   		  <meta charset="utf-8"/>
 
         <!--Libraries-->
-  		  <link rel="stylesheet" type="text/css" href="css/main.css">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+           <!--CSS & Bootstrap-->
+    		  <link rel="stylesheet" type="text/css" href="css/main.css">
+          <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+          <!--Javascript and JQuery-->
+          <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+          <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+      
+          <script type='text/javascript' src='js/main.js'></script>
+
+
     </head>
 
   <body>
-        <div class="container"> 
+
+    <header class="container">
+    <div class="row">
+       <h1 class="col-sm-4">Omer Baldo</h1>
+       <!--<img src="https://yt3.ggpht.com/-rqi1V9uXWAE/AAAAAAAAAAI/AAAAAAAAAAA/i_ArQsY1HQQ/s900-c-k-no-mo-rj-c0xffffff/photo.jpg" class ="thumbnail"/>-->
+        <nav class="col-sm-8 text-right">
+          <p class ="nb">About</p>
+          <p class ="nb">Projects</p>
+          <p class ="nb">Skills</p>
+          <p class ="nb" >Gym</p>
+          <p class ="nb">Contact</p>
+        </nav>
+    </div>
+  </header>
+        
+  <section class="jumbotron">
+     <div class="container">
+        <div class="row text-center">
+
+
+          <h3>Come learn about me</h3>
+          <a class="btn btn-primary" href="#" role="button">Enter</a>
+        </div>
+      </div>
+    </section>
+
+
+
+
+
+
+  </body>
+
+
+ <footer class="container">
+    <div class="row">
+         <p class="col-sm-4">Built with JQuery, Bootstrap, & Django</p>
+
+      <ul class="col-sm-8">
+        <li class="col-sm-1">
+          <img src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-4/twitter.svg">
+        </li>
+        <li class="col-sm-1">
+          <img src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-4/facebook.svg">
+        </li>
+        <li class="col-sm-1">
+          <img src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-4/instagram.svg">
+        </li>
+        <li class="col-sm-1">
+          <img src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-4/medium.svg">
+        </li>
+      </ul>
+    </div>
+  </footer>
+
+
+</html>
+
+
+
+
+<!--
+  Make footer have social media links
+
+
+  sections will be 
+
+      Home | About | Projects | Blog | Gym |
+
+
+
+
+<div class="container"> 
 
 
                   <ul class="nav nav-tabs">
@@ -64,45 +143,6 @@
 
 
 
-
- <footer class="container">
-    <div class="row">
-         <p class="col-sm-4">&copy; Omer Baldo Designs</p>
-
-      <ul class="col-sm-8">
-        <li class="col-sm-1">
-          <img src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-4/twitter.svg">
-        </li>
-        <li class="col-sm-1">
-          <img src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-4/facebook.svg">
-        </li>
-        <li class="col-sm-1">
-          <img src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-4/instagram.svg">
-        </li>
-        <li class="col-sm-1">
-          <img src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-4/medium.svg">
-        </li>
-      </ul>
-    </div>
-  </footer>
-
-
-
-
-  </body>
-
-
-
-</html>
-
-
-<!--
-  Make footer have social media links
-
-
-  sections will be 
-
-      Home | About | Projects | Blog | Gym |
 
 
 
