--- a/index.html
+++ b/index.html
@@ -10,7 +10,14 @@
         <meta name="author" content="Omer Suliman Baldo">
 
         <!--Icon-->
-        <title>Omer</title>
+
+         <div class="row">
+
+             <title>Omer</title>
+         </div>
+
+
+
         <link rel="shortcut icon" href="img/icon.png" type="image/x-icon">
         <link rel="icon" href="img/icon.png">
   		  <meta charset="utf-8"/>
@@ -32,7 +39,10 @@
 
     <header class="container">
     <div class="row">
-       <h1 class="col-sm-4">Omer Baldo</h1>
+          <a href ="index.html"><img src= "img/me.jpg" class="me"/></a>
+
+         <h1 class="col-sm-4">Omer Baldo</h1>
+
        <!--<img src="https://yt3.ggpht.com/-rqi1V9uXWAE/AAAAAAAAAAI/AAAAAAAAAAA/i_ArQsY1HQQ/s900-c-k-no-mo-rj-c0xffffff/photo.jpg" class ="thumbnail"/>-->
         <nav class="col-sm-8 text-right">
           <p class ="nb">About</p>
@@ -47,9 +57,10 @@
      <div class="container">
         <div class="row text-center">
 
+          <h4>Hey, I'm an independent web & software devloper from New Brunwick, New Jersey. I work primarily with Android Studios & Django.</h4>
 
-          <h3>Come learn about me</h3>
-          <a class="btn btn-primary" href="#" role="button">Enter</a>
+          <p></p>
+          <a class="btn btn-primary" href="#" role="button">Learn About Me</a>
         </div>
       </div>
     </section>
@@ -93,7 +104,6 @@
 
     </div>
   </footer>
-
 
 </html>
 
