--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
 
        <!--<img src="https://yt3.ggpht.com/-rqi1V9uXWAE/AAAAAAAAAAI/AAAAAAAAAAA/i_ArQsY1HQQ/s900-c-k-no-mo-rj-c0xffffff/photo.jpg" class ="thumbnail"/>-->
         <nav class="col-sm-8 text-right">
-          <p class ="nb">About</p>
-          <p class ="nb">Projects</p>
-          <p class ="nb">Skills</p>
-          <p class ="nb" >Gym</p>
+          <a href ="aboutme.html"><p class ="nb">About</p></a>
+          <a href ="projects.html"><p class ="nb">Projects</p></a>
+          <a href ="skills.html"><p class ="nb">Skills</p></a>
+          <a href="gym.html"><p class ="nb" >Gym</p></a>
         </nav>
     </div>
   </header>
