--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
           <a href ="projects.html"><p class ="nb">Projects</p></a>
           <a href ="skills.html"><p class ="nb">Skills</p></a>
           <a href="gym.html"><p class ="nb" >Gym</p></a>
+          <a href="resume.html"><p class ="nb" >Resume</p></a>
+
         </nav>
     </div>
   </header>
@@ -60,7 +62,7 @@
           <h4>Hey, I'm an independent web & software devloper from New Brunwick, New Jersey. I work primarily with Android Studios & Django.</h4>
 
           <p></p>
-          <a class="btn btn-primary" href="#" role="button">Learn About Me</a>
+          <a class="btn btn-primary" href="aboutme.html" role="button">Come Learn About Me</a>
         </div>
       </div>
     </section>
@@ -75,7 +77,7 @@
 
  <footer class="container">
     <div class="row">
-         <p class="col-sm-4">Built with JQuery, Bootstrap, & Django</p>
+         <p class="col-sm-4">Built with JQuery, Bootstrap, & GitHub Pages</p>
 
 
       <ul class="col-sm-8">
