--- a/skills.html
+++ b/skills.html
@@ -52,6 +52,8 @@
           <a href ="projects.html"><p class ="nb">Projects</p></a>
           <a href ="skills.html"><p class ="nb">Skills</p></a>
           <a href="gym.html"><p class ="nb" >Gym</p></a>
+                    <a href="resume.html"><p class ="nb" >Resume</p></a>
+
         </nav>
     </div>
   </header>
@@ -142,7 +144,7 @@
 
  <footer class="container">
     <div class="row">
-         <p class="col-sm-4">Built with JQuery, Bootstrap, & Django</p>
+         <p class="col-sm-4">Built with JQuery, Bootstrap, & GitHub Pages</p>
 
 
       <ul class="col-sm-8">
