--- a/gym.html
+++ b/gym.html
@@ -57,6 +57,142 @@
 
 
 
+<!--Gallary Starts Here-->
+<style>
+div.img {
+    margin: 5px;
+    border: 1px solid #ccc;
+    float: left;
+    width: 180px;
+    height: 230px;
+       position: block;
+padding: 25px;
+}
+
+div.img:hover {
+    border: 1px solid #777;
+}
+
+div.img img {
+    width: 100%;
+    height: 100%;
+    position: block;
+}
+
+div.desc {
+    /*padding: 15px;*/
+    text-align: center;
+    position: block;
+}
+</style>
+
+<div class="container">
+<div class="img">
+  <a target="_blank" href="img/gym/1.jpg">
+    <img src="img/gym/1.jpg" alt="RU Strong 2013" width="300" height="200">
+  </a>
+  <div class="desc">RU Strong Competition Freshmen Year</div>
+</div>
+
+<div class="img">
+  <a target="_blank" href="img/gym/11.png">
+    <img src="img/gym/11.png" alt="Rugby" width="600" height="400">
+  </a>
+  <div class="desc">Me and my mom after a rugby game </div>
+</div>
+
+<div class="img">
+  <a target="_blank" href="img/gym/2.jpg">
+    <img src="img/gym/2.jpg" alt="Northern Lights" width="600" height="400">
+  </a>
+  <div class="desc">Chalk</div>
+</div>
+
+<div class="img">
+  <a target="_blank" href="img/gym/3.jpg">
+    <img src= "img/gym/3.jpg" alt="Mountains" width="600" height="400">
+  </a>
+  <div class="desc">RU Strong Softmore Year </div>
+</div>
+
+<div class="img">
+  <a target="_blank" href="img/gym/4.jpg">
+    <img src= "img/gym/4.jpg" alt="Mountains" width="600" height="400">
+  </a>
+  <div class="desc">After a Rugby Playoff Game </div>
+</div>
+
+<div class="img">
+  <a target="_blank" href="img/gym/5.jpg">
+    <img src= "img/gym/5.jpg" alt="Mountains" width="600" height="400">
+  </a>
+  <div class="desc">Clean and Jerk </div>
+</div>
+
+
+<div class="img">
+  <a target="_blank" href="img/gym/6.jpg">
+    <img src= "img/gym/6.jpg" alt="Mountains" width="600" height="400">
+  </a>
+  <div class="desc">Rutgers Bench Press Competition </div>
+</div>
+
+
+<div class="img">
+  <a target="_blank" href="img/gym/7.jpg">
+    <img src= "img/gym/7.jpg" alt="Mountains" width="600" height="400">
+  </a>
+  <div class="desc">315 Bench </div>
+</div>
+
+
+<div class="img">
+  <a target="_blank" href="img/gym/8.jpg">
+    <img src= "img/gym/8.jpg" alt="Mountains" width="600" height="400">
+  </a>
+  <div class="desc">I don't skip leg day ;) </div>
+</div>
+
+
+<div class="img">
+  <a target="_blank" href="img/gym/9.jpg">
+    <img src= "img/gym/9.jpg" alt="Mountains" width="600" height="400">
+  </a>
+  <div class="desc">385 Deadlift </div>
+</div>
+
+<div class="img">
+  <a target="_blank" href="img/gym/19.jpg">
+    <img src= "img/gym/19.jpg" alt="Mountains" width="600" height="400">
+  </a>
+  <div class="desc">Body Building at a local gym</div>
+</div>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
