--- a/projects.html
+++ b/projects.html
@@ -71,10 +71,10 @@ site. Currently responsible for queries and extending the Django All-Auth user o
 Udemy.com Coding For Entrepreneurs tutorial, learned:
 <p>
 <ul>
-<li>Fast Querying: Elastic search search engine which is used by companies such as NetÓix and
+<li>Fast Querying: Elastic search search engine which is used by companies such as Netflix and
 Linkedin.</li>
-<li>FDjango Models: migrations, extending Django All-Auth user object</li>
-<li>Form Validation: Cross site veriÒcation tokens, Http Response Redirect based on wrong input</li>
+<li>Django Models: migrations, extending Django All-Auth user object</li>
+<li>Form Validation: Cross site verication tokens, Http Response Redirect based on wrong input</li>
 <li>Url Routing/Dynamic Webpages: Slug Fields, loading information from a JSON into a HTML
 document </li>        
  </ul>
