--- a/skills.html
+++ b/skills.html
@@ -181,6 +181,7 @@ function myFunction() {
               <li>C</li>
               <li>Scheme</li>
               <li>Javascript</li>
+              <li>MatLab </li>
 
             </ul>
             </div>
@@ -210,6 +211,9 @@ function myFunction() {
             <ul>
               <li>Serialization </li>
               <li>Elastic Search </li>
+              <li>mySQL </li>
+              <li>XML </li>
+
             </ul>
             </div>
 
