--- a/projects.html
+++ b/projects.html
@@ -208,9 +208,13 @@ document </li>
  <div class="element">
            <div class = "dad"></div>
 
-          <h2>Dads Website! </h2>
+          <h2><a href = "sulimanbaldo.com">Dads Website!</a> </h2>
           <p>
-           Currently designing my fathers website. Challenges include how to securely store confidential data so that only certain users can see certain media.
+           Created my father/Human Right UN Expert a website so that he could share his work in:
+• Al Qaeda involvement in Mali 
+• Mass genocide in Sudan's Blue Nile, Nubian mountains & Dafur Regions 
+• Other human right conflicts in Sub Saharan Africa
+Common problems I am trying to overcome is how to thwart attacks on the website from foreign agents.
           </p>
                             <hr></hr>
 
