--- a/projects.html
+++ b/projects.html
@@ -208,7 +208,7 @@ document </li>
  <div class="element">
            <div class = "dad"></div>
 
-          <h2><a href = "sulimanbaldo.com">Dads Website!</a> </h2>
+          <h2><a href = "http://sulimanbaldo.com">Dads Website!</a> </h2>
           <p>
            Created my father/Human Right UN Expert a website so that he could share his work in:
 
