--- a/projects.html
+++ b/projects.html
@@ -147,7 +147,7 @@ function myFunction() {
     
   <div class="element">
           <div class = "RN"></div>
-          <a href=" http://omerbaldo.com/RuNotes/"<h2>RU Notes! </h2></a>
+          <a href=" http://omerbaldo.com/RuNotes/"><h2>RU Notes! </h2></a>
           <p>
 Done with a team of four implementing Django Web Framework, and Amazon's EBS services. RUNotes
 is an ongoing project which allows students to create,retrieve, upload and delete notes to the
