--- a/projects.html
+++ b/projects.html
@@ -191,7 +191,7 @@ document </li>
 
           <div class = "chess"></div>
 
-          <h2>Political Chess</h2>
+          <a href="https://www.youtube.com/watch?v=BY1FNwCIqtE"><h2>Political Chess</h2></a>
           <p>
             Android Application created for the election. Used object oriented principals, learned from class, to design the app. Specifically I designed an UML, state machine (for different activities),  and used design patterns for efficiency. 
           </p>
