--- a/projects.html
+++ b/projects.html
@@ -248,6 +248,24 @@ Common problems I am trying to overcome is how to thwart attacks on the website 
 
 
 
+
+      <div class="element">
+          <div class = "ML"></div>
+          <a href="https://github.com/omerbaldo/Data-Fitting-with-Cubic-Splines"><h2> South African Heart Disease! </h2></a>
+          <p>
+            Machine learning algorithm  which uses the cubic spline method, in Matlab, to show the relation between variables (alcohol, age, obesity) and the South African Heart disease. 
+ 
+          </p>
+                                <hr></hr>
+
+      </div>
+
+
+
+
+
+
+
   </body>
 
 
