--- a/aboutme.html
+++ b/aboutme.html
@@ -161,7 +161,7 @@ function myFunction() {
           Fun Facts
           </h1>
           <p>
-          A few fun facts about myself: I love cheesecake, I have a cat named after the Salem Witch Trials and a dog after a werewolf, my favorite number is 88, <a href="https://www.youtube.com/edit?video_id=1_OUKj8mitQ&video_referrer=watch"> I speak a dialect of arabic,</a> I love to work out, I love to workout like crazy, and the reason I have glasses is because of silly elementary school dares. 
+          A few fun facts about myself: I love cheesecake, I have a cat named after the Salem Witch Trials and a dog after a werewolf, my favorite number is 88, <a href="https://www.youtube.com/watch?v=1_OUKj8mitQ&t=141s"> I speak a dialect of arabic,</a> I love to work out, I love to workout like crazy, and the reason I have glasses is because of silly elementary school dares. 
           </p>
 
       </div>
