--- a/aboutme.html
+++ b/aboutme.html
@@ -161,7 +161,7 @@ function myFunction() {
           Fun Facts
           </h1>
           <p>
-          A few fun facts about myself: I love cheesecake, I have a cat named after the Salem Witch Trials and a dog after a werewolf, my favorite number is 88, <a href="https://www.youtube.com/watch?v=1_OUKj8mitQ&t=141s"> I speak a dialect of arabic,</a> I love to work out, I love to workout like crazy, and the reason I have glasses is because of silly elementary school dares. 
+          A few fun facts about myself: I love cheesecake, I have a cat named after the Salem Witch Trials, my favorite number is 88, <a href="https://www.youtube.com/watch?v=1_OUKj8mitQ&t=141s"> I am learning to speak a dialect of arabic,</a> I love to work out, I love to workout like crazy, and the reason I have glasses is because of silly elementary school dares. 
           </p>
 
       </div>
@@ -175,11 +175,7 @@ function myFunction() {
           <li>Completing my Bachelor of Science in Computer Science at Rutgers University </li>
           <li>Starting my father, Doctor Suliman Baldo, website so he can share his <a href = "http://www.ohchr.org/EN/NewsEvents/Pages/DisplayNews.aspx?NewsID=15615&LangID=E">UN</a> reports with the world</li>
           <li>Winning a Rugby National Championship</li>
-          <li>Learning new full stack skills through Code Academy. Plan to learn </li>
-            <ul>
-              <li>SQL</li>
-              <li>Ruby</li>
-            </ul>
+          <li>Learning new full stack skills through Code Academy </li>
           <li>Learning the modern standard dialect of Arabic</li>
 
 
@@ -192,13 +188,14 @@ function myFunction() {
         What I've Completed 
         </h1>
         <ul>
+
+
           <li>Undergraduate Research For The <a href = "http://videowall.cs.rutgers.edu/">Video Walls For Telepresence Project</a> </li>
           <li>Tought highschool students programming with <a href = "https://www.idtech.com/locations/new-jersey-summer-camps/south-orange/id-tech-seton-hall-university/">ID Tech</a> </li>
           <li>Won Second in the  <a href="http://www.keystonerugby.com/page/show/1308851-home">KeyStone Rugby Conference Championship Game </a></li>
           <li>Learned these full stack skills through Code Academy and Udemy </li>
             <ul>
               <li>React</li>
-              <li>Sass</li>
               <li>JQuery</li>
               <li>Django</li>
               <li>Elastic Search</li>
