--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 	  <ul class="nav navbar-nav navbar-right text-center">
 	    <li><a href="#top"><i class="service-icon fa fa-home"></i>&nbsp;Home</a></li>
         <li><a href="#about"><i class="service-icon fa fa-info"></i>&nbsp;About</a></li>
-        <li><a href="#services"><i class="service-icon fa fa-laptop"></i>&nbsp;Services</a></li>
+        <li><a href="#services"><i class="service-icon fa fa-laptop"></i>&nbsp;Skills</a></li>
         <li><a href="#portfolio"><i class="service-icon fa fa-camera"></i>&nbsp;Portfolio</a></li>
         <li><a href="#contact"><i class="service-icon fa fa-envelope"></i>&nbsp;Contact</a></li>
     </ul>
@@ -69,7 +69,7 @@
         <div class="row">
           <div class="col-md-8 col-md-offset-2 text-center">
             <h2>What can I do for you ?</h2>
-            <p class="lead">After talking to multiple senior level developers and hiring managers I have discovered the biggest problems they face, when hiring a new developer, is finding someone who is coachable and understand their Computer Science fundamentals. 
+            <p class="lead">After talking to multiple senior level developers and hiring managers I have discovered the biggest problems they face, when hiring a new developer, is finding someone who is coachable and can understand their Computer Science fundamentals. 
             </p>
 <p class="lead">
 I pride myself in knowing that my most redeeming qualities are thriving in a fast paced environment, and implementing what I learned in class on real world applications. 
@@ -77,20 +77,20 @@ I pride myself in knowing that my most redeeming qualities are thriving in a fas
 
 <p class="lead">
 <b>
-I quickly produce data driven web pages that span across multiple platforms 
+I quickly produce data driven web pages that span across multiple platforms.
 </b>
 </p>
 <p class="lead">
 
-I thrive in fast paced environments and learn new concepts quickly
+I thrive in fast paced environments and learn new concepts quickly.
 </p>
 <p class="lead">
 <b>
-I implement algorithms that can predict trends in big businesses 
+I implement algorithms that can predict trends in big businesses.
 </b>
 </p>
 <p class="lead">
-I understand how to implement Computer Science Fundamentals
+I understand how to implement Computer Science Fundamentals.
 </p>
 
 
